--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="img/logo.png">
-	<title>դասարան</title>
+	<title>Դասարան</title>
 </head>
 <body>
 <nav class="menu">  
